# bacongris

./: .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
ASM-fetch-main/: README.md  docker-compose.vault.yml  scan_vault.py
ASM-fetch-main/csv_output/: asm_from_vault.csv
CVE_Project_NVD/: README.md  main.py
CVE_Project_NVD/NVD_CVE/: __init__.py  update_nvd_feeds.py
CVE_Project_NVD/csv_output/: nvd_from_vault.csv
IOCs-crawler-main/: README.md  celery_vault_example.py  ioc_celery_vault.py
cti_vault_bootstrap/: README.md  WIRING.md  docker-compose.asm.snippet.yml  pyproject.toml
cti_vault_bootstrap/cti_vault.egg-info/: PKG-INFO  SOURCES.txt
cti_vault_bootstrap/shared_utils/: __init__.py  csv_export.py  db_manager.py  nvd_feed_parse.py
cti_vault_bootstrap/tests/: test_db_manager.py
docs/superpowers/specs/: 2026-04-26-workspaces-profiles-learning-design.md
scripts/: cti_workflows.json  workflow_runner.py
shared_utils/: __init__.py  cti_pipelines.py
src/: App.css  App.tsx  IntegratedTerminal.tsx  MaintenanceDashboard.tsx  MaintenanceModal.tsx  WorkflowsGuideModal.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: active_run.rs  app_data.rs  audit.rs  campaigns_util.rs  executor.rs  gui_spawn_env.rs  lib.rs  main.rs  ollama.rs  paths.rs  persist_io.rs  pty_terminal.rs  session.rs  settings.rs  threat_time.rs  workflow_runner.rs  workspace.rs  workspace_analyze.rs
src-tauri/src/api/: client.rs  mod.rs  secrets.rs  ssrf.rs
src-tauri/src/correlation/: mod.rs
src-tauri/src/enrichment/: mod.rs  relationships.rs
src-tauri/src/feeds/: misp_cursor.rs  mod.rs  opencti.rs  scheduler.rs
src-tauri/src/ioc/: maintenance.rs  misp.rs  mitre.rs  mod.rs  opencti_import.rs  otx_import.rs  stix.rs  stix_export.rs  vault_cve_sync.rs
src/lib/: ContextIntegrator.ts  chatAttachments.ts  chatDisplay.ts  ctiVaultSync.ts  directTrustedWorkflow.ts  maintenance.test.ts  maintenance.ts  prompt_builder.ts  runCommandDenial.ts  visualWorkspaceMap.ts  workspace.ts
src/lib/agent/: OllamaClient.ts  agentDebug.ts  loop.ts  ollamaMessages.test.ts  ollamaMessages.ts  routingHints.ts  systemPrompt.ts  toolArgs.runcommand.test.ts  toolArgs.ts  toolCallFallback.test.ts  toolCallFallback.ts  tools.ts  types.ts  verifier.ts
tests/: test_db_manager.py  test_nvd_feed_parse.py  test_open_vault.py  test_pipelines.py
