[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cti-vault"
version = "0.1.0"
description = "Centralized CTI SQLite vault (shared_utils) for workspace-root All_Scripts layouts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared_utils*"]
