[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cti-vault"
version = "0.1.0"
description = "Centralized CTI SQLite vault (shared_utils) for Bacongris All_Scripts workspaces"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["shared_utils*"]
