[package]
name = "bacongris"
version = "0.1.0"
description = "Local CTI agent desktop app (Ollama + local scripts)"
authors = ["you"]
edition = "2021"

[lib]
name = "bacongris_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "io-util"] }
chrono = { version = "0.4", features = ["serde"] }
dunce = "1"
dirs = "5"
portable-pty = "0.8"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"

